added localisation for 0.8

--- a/localisation/jormarn_l_german.yml
+++ b/localisation/jormarn_l_german.yml
@@ -160,6 +160,135 @@
  war_demand_expel_tooltip_proper_content:2 "Alle Bewohner von [parameter:planet.GetName] werden gewaltsam vertrieben. Sie werden versuchen zu anderen Planeten ihres Reiches zu fliehen. Viele werden es vielleicht nicht schaffen. \n\nIm Besitz von: §H[parameter:planet.GetOwnerName]§!\nKontrolliert durch: §H[parameter:planet.GetControllerName]§!"
  war_demand_expel_no_purge:0 "Unsere Regierung verbietet ethnische Säuberungen, und das hier kommt dem möglicherweise unangenehm nah. "
  war_demand_expel_not_under_our_control:0 "Wir haben keine Kontrolle über diesen Planeten"
+ ####POLICIES
+  war_demand_policies_already_has_policy:0 "The target already has this policy"
+ war_demand_policies_hypocrites:0 "We must adhere to this policy ourselves"
+ war_demand_policies_ethics_lock:0 "Only specific ethics can use this wargoal"
+ war_demand_policies_wrong_type:0 "This entity has no concept of policies"
+ war_demand_policies_no_planets:0 "This entity will have no planets left after the war"
+ ##policies:
+ # Policy Change Wargoals
+ war_demand_policies_already_has_policy:0 "Das Ziel verfolgt diese Richtlinie bereits."
+ war_demand_policies_hypocrites:0 "Wir müssen diese Richtlinie selbst verfolgen."
+ war_demand_policies_ethics_lock:0 "Nur Reiche mit einem bestimmten Ethos können dieses Ziel verfolgen."
+ war_demand_policies_wrong_type:0 "Diese Entität versteht nichts von politischen Richtlinien"
+ war_demand_policies_no_planets:0 "Diese Entität wird nach dem Krieg keine Planeten mehr besitzen."
+ ##policies:
+ #1) limit bombardment ##
+ DEMAND_POLICY_LIMIT_BOMBARDMENT:0 "Erwinge Zustimmung zu Protokollen von minimaler Orbitalbombardierung"
+ DEMAND_POLICY_LIMIT_BOMBARDMENT_TITLE:0 "$DEMAND_POLICY_LIMIT_BOMBARDMENT$"
+ DEMAND_POLICY_LIMIT_BOMBARDMENT_INFO:0 "Zustimmung zu Protokollen von minimaler Orbitalbombardierung wird erzwungen werden. Dies wird für 10 Jahre gültig sein."
+ DEMAND_POLICY_LIMIT_BOMBARDMENT_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_BOMBARDMENT_INFO$"
+ war_demand_policy_limit_bombardment_header:1 "§GErwinge Zustimmung zu Protokollen von minimaler Orbitalbombardierung§!"
+ war_demand_policy_limit_bombardment_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_bombardment_tooltip_header:0 "$war_demand_policy_limit_bombardment_header$"
+ war_demand_policy_limit_bombardment_tooltip_content:2 "Zustimmung zu Protokollen von minimaler Orbitalbombardierung wird vom [parameter:country.GetName] erzwungen werden. Dies wird für 10 Jahre gültig sein."
+ war_demand_policy_limit_bombardment_tooltip_proper_header:1 "$war_demand_policy_limit_bombardment_header$"
+ war_demand_policy_limit_bombardment_tooltip_proper_content:2 "$war_demand_policy_limit_bombardment_tooltip_content$"
+ #2) limit Slavery ##
+ DEMAND_POLICY_LIMIT_SLAVERY:0 "Sklaverei abschaffen"
+ DEMAND_POLICY_LIMIT_SLAVERY_TITLE:0 "$DEMAND_POLICY_LIMIT_SLAVERY$"
+ DEMAND_POLICY_LIMIT_SLAVERY_INFO:0 "Alle Sklaven werden von ihren Fesseln befreit werden und für mindestens 10 Jahre wird Sklaverei verboten sein."
+ DEMAND_POLICY_LIMIT_SLAVERY_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_SLAVERY_INFO$"
+ war_demand_policy_limit_slavery_header:1 "§GSklaverei abschaffen§!"
+ war_demand_policy_limit_slavery_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_slavery_tooltip_header:0 "$war_demand_policy_limit_slavery_header$"
+ war_demand_policy_limit_slavery_tooltip_content:2 "Alle Sklaven in [parameter:country.GetName] werden von ihren Fesseln befreit werden und für mindestens 10 Jahre wird Sklaverei verboten sein."
+ war_demand_policy_limit_slavery_tooltip_proper_header:1 "$war_demand_policy_limit_slavery_header$"
+ war_demand_policy_limit_slavery_tooltip_proper_content:2 "$war_demand_policy_limit_slavery_tooltip_content$"
+ #3) limit AI ##
+ DEMAND_POLICY_LIMIT_AI:0 "Künstliche Intelligenz verbieten"
+ DEMAND_POLICY_LIMIT_AI_TITLE:0 "$DEMAND_POLICY_LIMIT_AI$"
+ DEMAND_POLICY_LIMIT_AI_INFO:0 "Alle robotischen Arbeiter und synthetischen Lebensformen werden zerstört und jegliche Form von künstlicher Intelligenz wird für 10 Jahre verboten werden."
+ DEMAND_POLICY_LIMIT_AI_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_AI_INFO$"
+ war_demand_policy_limit_ai_header:1 "§GKünstliche Intelligenz verbieten§!"
+ war_demand_policy_limit_ai_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_ai_tooltip_header:0 "$war_demand_policy_limit_ai_header$"
+ war_demand_policy_limit_ai_tooltip_content:2 "Alle robotischen Arbeiter und synthetischen Lebensformen in [parameter:country.GetName] werden zerstört und jegliche Form von künstlicher Intelligenz wird für 10 Jahre verboten werden."
+ war_demand_policy_limit_ai_tooltip_proper_header:1 "$war_demand_policy_limit_ai_header$"
+ war_demand_policy_limit_ai_tooltip_proper_content:2 "$war_demand_policy_limit_ai_tooltip_content$"
+ #4) allow AI ##
+ DEMAND_POLICY_ALLOW_AI:0 "Volle Rechte für künstliche Intelligenz"
+ DEMAND_POLICY_ALLOW_AI_TITLE:0 "$DEMAND_POLICY_ALLOW_AI$"
+ DEMAND_POLICY_ALLOW_AI_INFO:0 "Allen intelligenten synthetischen Lebensformen werden die Rechte eines ordentlichen Staatsbürgers verliehen. Für mindestens 10 Jahre wird dies unumstößlich sein."
+ DEMAND_POLICY_ALLOW_AI_INFO_SOLO:0 "$DEMAND_POLICY_ALLOW_AI_INFO$"
+ war_demand_policy_allow_ai_header:1 "§GVolle Rechte für künstliche Intelligenz§!"
+ war_demand_policy_allow_ai_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_allow_ai_tooltip_header:0 "$war_demand_policy_allow_ai_header$"
+ war_demand_policy_allow_ai_tooltip_content:2 "Allen intelligenten synthetischen Lebensformen in [parameter:country.GetName] werden die Rechte eines ordentlichen Staatsbürgers verliehen. Für mindestens 10 Jahre wird dies unumstößlich sein."
+ war_demand_policy_allow_ai_tooltip_proper_header:1 "$war_demand_policy_allow_ai_header$"
+ war_demand_policy_allow_ai_tooltip_proper_content:2 "$war_demand_policy_allow_ai_tooltip_content$"
+ #5) limit migration ##
+ DEMAND_POLICY_LIMIT_MIGRATION:0 "Xeno-Migration einschränken"
+ DEMAND_POLICY_LIMIT_MIGRATION_TITLE:0 "$DEMAND_POLICY_LIMIT_MIGRATION$"
+ DEMAND_POLICY_LIMIT_MIGRATION_INFO:0 "Diese verdammten Xenos verbreiten sich über die ganze Galaxie. Verbiete ihnen für mindestens 10 Jahre von ihren pathetischen Planeten zu emigrieren."
+ DEMAND_POLICY_LIMIT_MIGRATION_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_MIGRATION_INFO$"
+ war_demand_policy_limit_migration_header:1 "§GXeno-Migration einschränken§!"
+ war_demand_policy_limit_migration_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_migration_tooltip_header:0 "$war_demand_policy_limit_migration_header$"
+ war_demand_policy_limit_migration_tooltip_content:2 "Diese verdammten Xenos aus [parameter:country.GetName] verbreiten sich über die ganze Galaxie. Verbiete ihnen für mindestens 10 Jahre von ihren pathetischen Planeten zu emigrieren."
+ war_demand_policy_limit_migration_tooltip_proper_header:1 "$war_demand_policy_limit_migration_header$"
+ war_demand_policy_limit_migration_tooltip_proper_content:2 "$war_demand_policy_limit_migration_tooltip_content$"
+ #6) limit enlightenment ##
+ DEMAND_POLICY_LIMIT_NATIVES:0 "Erleuchtung von Primitiven verbieten"
+ DEMAND_POLICY_LIMIT_NATIVES_TITLE:0 "$DEMAND_POLICY_LIMIT_NATIVES$"
+ DEMAND_POLICY_LIMIT_NATIVES_INFO:0 "Das letzte was diese Galaxie braucht sind noch mehr aufstrebene Xeno-Reiche. Verbiete die Erleuchtung von Primitiven für mindestens 10 Jahre."
+ DEMAND_POLICY_LIMIT_NATIVES_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_NATIVES_INFO$"
+ war_demand_policy_limit_natives_header:1 "§GErleuchtung von Primitiven verbieten§!"
+ war_demand_policy_limit_natives_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_natives_tooltip_header:0 "$war_demand_policy_limit_natives_header$"
+ war_demand_policy_limit_natives_tooltip_content:2 "Das letzte was diese Galaxie braucht sind noch mehr aufstrebene Xeno-Reiche. Verbiete [parameter:country.GetName] die Erleuchtung von Primitiven für mindestens 10 Jahre."
+ war_demand_policy_limit_natives_tooltip_proper_header:1 "$war_demand_policy_limit_natives_header$"
+ war_demand_policy_limit_natives_tooltip_proper_content:2 "$war_demand_policy_limit_natives_tooltip_content$"
+ #7) limit war economy ##
+ DEMAND_POLICY_LIMIT_WAR_ECONOMY:0 "Militärische Beschränkungen aufzwingen"
+ DEMAND_POLICY_LIMIT_WAR_ECONOMY_TITLE:0 "$DEMAND_POLICY_LIMIT_WAR_ECONOMY$"
+ DEMAND_POLICY_LIMIT_WAR_ECONOMY_INFO:0 "Zwinge dem Ziel militärische Beschränkung in ihrer Kriegswirtschaft auf und vermindere ihre Effektivität in offensiven Kriegen für 10 Jahre."
+ DEMAND_POLICY_LIMIT_WAR_ECONOMY_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_WAR_ECONOMY_INFO$"
+ war_demand_policy_limit_war_economy_header:1 "§GMilitärische Beschränkungen aufzwingen§!"
+ war_demand_policy_limit_war_economy_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_war_economy_tooltip_header:0 "$war_demand_policy_limit_war_economy_header$"
+ war_demand_policy_limit_war_economy_tooltip_content:2 "Zwinge [parameter:country.GetName] militärische Beschränkung in ihrer Kriegswirtschaft auf und vermindere ihre Effektivität in offensiven Kriegen für 10 Jahre."
+ war_demand_policy_limit_war_economy_tooltip_proper_header:1 "$war_demand_policy_limit_war_economy_header$"
+ war_demand_policy_limit_war_economy_tooltip_proper_content:2 "$war_demand_policy_limit_war_economy_tooltip_content$"#
+ #8) limit purges
+ DEMAND_POLICY_LIMIT_PURGE:0 "Säuberungen verbieten"
+ DEMAND_POLICY_LIMIT_PURGE_TITLE:0 "$DEMAND_POLICY_LIMIT_PURGE$"
+ DEMAND_POLICY_LIMIT_PURGE_INFO:0 "Alle Säuberungen im Zielreich werden gestoppt und für mindestens 10 Jahre werden weitere Säuberungen strikt verboten."
+ DEMAND_POLICY_LIMIT_PURGE_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_PURGE_INFO$"
+ war_demand_policy_limit_purge_header:1 "§GSäuberungen verbieten§!"
+ war_demand_policy_limit_purge_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_purge_tooltip_header:0 "$war_demand_policy_limit_purge_header$"
+ war_demand_policy_limit_purge_tooltip_content:2 "Alle Säuberungen in [parameter:country.GetName] werden gestoppt und für mindestens 10 Jahre werden weitere Säuberungen strikt verboten."
+ war_demand_policy_limit_purge_tooltip_proper_header:1 "$war_demand_policy_limit_purge_header$"
+ war_demand_policy_limit_purge_tooltip_proper_content:2 "$war_demand_policy_limit_purge_tooltip_content$"
+ ##################
+ #Supremacy 
+ DEMAND_SUPREMACY:0 "Übermacht"
+ DEMAND_SUPREMACY_TITLE:0 "§PÜbermacht§"
+ DEMAND_SUPREMACY_INFO:0 "Wir werden unsere schreckliche militärische Übermacht aufbringen und alle Planeten des Ziels annektieren. Dies wird uns zum Feind aller zivilisierten Völker in der Galaxis machen."
+ DEMAND_SUPREMACY_INFO_SOLO:0 "$DEMAND_SUPREMACY_INFO$"
+ war_demand_supremacy_header:1 "§PÜbermacht§!"
+ war_demand_supremacy_subtext:1  "[parameter:country.GetName]"
+ war_demand_supremacy_tooltip_header:0 "$PÜbermacht$"
+ war_demand_supremacy_tooltip_content:2 "Wir werden unsere schreckliche militärische Übermacht aufbringen und alle Planeten von [parameter:country.GetName] annektieren. Dies wird uns zum Feind aller zivilisierten Völker in der Galaxis machen."
+ war_demand_supremacy_tooltip_proper_header:1 "$war_demand_supremacy_header$"
+ war_demand_supremacy_tooltip_proper_content:2 "$war_demand_supremacy_tooltip_content$"
+ war_demand_supremacy_wrong_type:0 "Wir könnnen diesem Feind nicht mit unseren gewohnten Methoden gegenübertreten."
+ war_demand_supremacy_vassalize:0 "Wir können nicht gleichzeitig unterjochen und annektieren"
+ #Xenoplague
+ DEMAND_XENOPLAGUE:0 "Die Xeno-Plage"
+ DEMAND_XENOPLAGUE_TITLE:0 "§RDie Xeno-Plage§"
+ DEMAND_XENOPLAGUE_INFO:0 "Wir werden unsere Xeno-Plage auf ihren Planeten entfesseln. Alle höheren Lebensformen, die nicht unseren genetischen Code teilen, werden zu Grunde gehen. Dies wird uns zum Feind aller zivilisierten Völker in der Galaxis machen."
+ DEMAND_XENOPLAGUE_INFO_SOLO:0 "$DEMAND_XENOPLAGUE_INFO$"
+ war_demand_xenoplague_header:1 "§RDie Xeno-Plage§!"
+ war_demand_xenoplague_subtext:1 "[parameter:country.GetName]"
+ war_demand_xenoplague_tooltip_header:0 "Die Xeno-Plage"
+ war_demand_xenoplague_tooltip_content:2 "Wir werden unsere Xeno-Plage auf den Planeten von [parameter:country.GetName] entfesseln. Alle höheren Lebensformen, die nicht unseren genetischen Code teilen, werden zu Grunde gehen. Dies wird uns zum Feind aller zivilisierten Völker in der Galaxis machen."
+ war_demand_xenoplague_tooltip_proper_header:1 "$war_demand_xenoplague_header$"
+ war_demand_xenoplague_tooltip_proper_content:2 "$war_demand_xenoplague_tooltip_content$"
+ war_demand_xenoplague_wrong_type:0 "Unsere Experten sind sich unsicher, ob unsere Plage hier Erfolg haben wird."
+ war_demand_xenoplague_vassalize:0 "Wir können kein Reich unterjochen, das nach dem Krieg ausgelöscht sein wird."
  
  
  #some custom_tool_fail
@@ -170,7 +299,9 @@
  war_demand_raze_fullbombs:0 "Diese Option ist definitiv mit unseren Protokollen zu orbitalem Bombardement oder ähnlichen pazifistischen Sentiments vereinbar."
  war_demand_demil_fullbombs:0 "Diese Option steht im Einklang zu Protokollen des leichten orbitalen Bombardements."
  war_demand_nuke_mil:0 "Nur fanatische Militaristen würden diese Option in Erwägung ziehen."
- 
+ war_demand_not_opponent:0 "Dieses Reich ist kein Kriegsgegner." 
+ war_demand_tech_missing:0 "Uns fehlt eine entscheidende Technologie für diese Strategie" 
+ war_demand_no_planets:0 "Diese Entität wird nach dem Krieg über keine Planeten mehr verfügen" 
  
  ## Edict to Enslave
  
@@ -194,9 +325,16 @@
  pop_kidnapped:0 "Wurde entführt"
  pop_rescued:0 "Wurde aus fremdem Reich gerettet"
  pop_expelled:0 "Musste Heimatplaneten verlassen"
+ pop_scourge_of_the_galaxy:0 "Unsere Regierung ist die Geißel der Galaxie"
  # opinion modifers
  opinion_enslaved_pops:"Hat unsere Bevölkerung versklavt"
  opinion_humiliated_country:"Hat uns gedemütigt"
  opinion_nuked_us:"Hat einen unseren Heimatplaneten zerstört"
- opinion_intervened_against_us:0  "Intervened in a war against our interests"
- opinion_intervened_for_us:0 "Intervened in a war on our behalf"
+ opinion_intervened_against_us:0  "Hat gegen uns interveniert"
+ opinion_intervened_for_us:0 "Hat für uns interveniert"
+ opinion_interfered_with_our_politics:0 "Hat sich in unsere Innenpolitik eingemischt." 
+ opinion_policy_good:0 "Hat die Politik eines Reiches in unserem Sinne geändert" 
+ opinion_policy_bas:0 "Hat die Politik eines Reiches nicht in unserem Sinne geändert" 
+ opinion_nuked_a_world:0 "Hat eine fruchtbare Welt zerstört" 
+ opinion_scourge_of_the_galaxy:0 "Niederträchtige Geißel der Galaxie" 
+  
