--- a/localisation/jormarn_l_english.yml
+++ b/localisation/jormarn_l_english.yml
@@ -181,89 +181,129 @@
  #war_demand_enforce_peace_no_war
  #war_enforce_peace_win_war
  # Policy Change Wargoals
- war_demand_policies_already_has_policy:0 "The target already has this policy"
- war_demand_policies_hypocrites:0 "We must adhere to this policy ourselves"
- war_demand_policies_ethics_lock:0 "Only specific ethics can use this wargoal"
- war_demand_policies_wrong_type:0 "This entity has no concept of policies"
- war_demand_policies_no_planets:0 "This entity will have no planets left after the war"
+ war_demand_policies_already_has_policy:0 "Das Ziel verfolgt diese Richtlinie bereits."
+ war_demand_policies_hypocrites:0 "Wir müssen diese Richtlinie selbst verfolgen."
+ war_demand_policies_ethics_lock:0 "Nur Reiche mit einem bestimmten Ethos können dieses Ziel verfolgen."
+ war_demand_policies_wrong_type:0 "Diese Entität versteht nichts von politischen Richtlinien"
+ war_demand_policies_no_planets:0 "Diese Entität wird nach dem Krieg keine Planeten mehr besitzen."
  ##policies:
  #1) limit bombardment ##
- DEMAND_POLICY_LIMIT_BOMBARDMENT:0 "POLICY_LIMIT_BOMBARDMENT the inhabitants of $PLANET|H$"
- DEMAND_POLICY_LIMIT_BOMBARDMENT_TITLE:0 "§RPOLICY_LIMIT_BOMBARDMENT§!: $POPULATION|H$"
- DEMAND_POLICY_LIMIT_BOMBARDMENT_INFO:0 "POLICY_LIMIT_BOMBARDMENTled, whether they have escape ships or not..."
- DEMAND_POLICY_LIMIT_BOMBARDMENT_INFO_SOLO:0 "All inhabitants of this planet will be forcibly POLICY_LIMIT_BOMBARDMENTled, whether they have escape ships or not..."
- war_demand_policy_limit_bombardment_header:1 "§Rpolicy_limit_bombardment Population§!"
- war_demand_policy_limit_bombardment_subtext:1 "[parameter:planet.GetName] ([parameter:planet.GetStarName])"
- war_demand_policy_limit_bombardment_tooltip_header:0 "policy_limit_bombardment Population"
- war_demand_policy_limit_bombardment_tooltip_content:2 "[parameter:planet.GetName]"
+ DEMAND_POLICY_LIMIT_BOMBARDMENT:0 "Impose light bombardment protocolls"
+ DEMAND_POLICY_LIMIT_BOMBARDMENT_TITLE:0 "$DEMAND_POLICY_LIMIT_BOMBARDMENT$"
+ DEMAND_POLICY_LIMIT_BOMBARDMENT_INFO:0 "Light bombardment protocolls will be imposed upon the target empire. This treaty will be active for 10 years."
+ DEMAND_POLICY_LIMIT_BOMBARDMENT_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_BOMBARDMENT_INFO$"
+ war_demand_policy_limit_bombardment_header:1 "§GImpose light bombardment protocolls§!"
+ war_demand_policy_limit_bombardment_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_bombardment_tooltip_header:0 "$war_demand_policy_limit_bombardment_header$"
+ war_demand_policy_limit_bombardment_tooltip_content:2 "After the war, light bombardment protocolls will be imposed upon the [parameter:country.GetName]. This will curtail their destructive tendencies for 10 years. "
  war_demand_policy_limit_bombardment_tooltip_proper_header:1 "$war_demand_policy_limit_bombardment_header$"
  war_demand_policy_limit_bombardment_tooltip_proper_content:2 "$war_demand_policy_limit_bombardment_tooltip_content$"
  #2) limit Slavery ##
- DEMAND_POLICY_LIMIT_SLAVERY:0 "POLICY_LIMIT_SLAVERY the inhabitants of $PLANET|H$"
- DEMAND_POLICY_LIMIT_SLAVERY_TITLE:0 "§RPOLICY_LIMIT_SLAVERY§!: $POPULATION|H$"
- DEMAND_POLICY_LIMIT_SLAVERY_INFO:0 "POLICY_LIMIT_SLAVERYled, whether they have escape ships or not..."
- DEMAND_POLICY_LIMIT_SLAVERY_INFO_SOLO:0 "All inhabitants of this planet will be forcibly POLICY_LIMIT_SLAVERYled, whether they have escape ships or not..."
- war_demand_policy_limit_slavery_header:1 "§Rpolicy_limit_slavery Population§!"
- war_demand_policy_limit_slavery_subtext:1 "[parameter:planet.GetName] ([parameter:planet.GetStarName])"
- war_demand_policy_limit_slavery_tooltip_header:0 "policy_limit_slavery Population"
- war_demand_policy_limit_slavery_tooltip_content:2 "[parameter:planet.GetName]"
+ DEMAND_POLICY_LIMIT_SLAVERY:0 "Abolish Slavery"
+ DEMAND_POLICY_LIMIT_SLAVERY_TITLE:0 "$DEMAND_POLICY_LIMIT_SLAVERY$"
+ DEMAND_POLICY_LIMIT_SLAVERY_INFO:0 "All slaves in the target country will be freed and slavery will be forbidden for the duration of the treaty."
+ DEMAND_POLICY_LIMIT_SLAVERY_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_SLAVERY_INFO$"
+ war_demand_policy_limit_slavery_header:1 "§GAbolish Slavery§!"
+ war_demand_policy_limit_slavery_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_slavery_tooltip_header:0 "$war_demand_policy_limit_slavery_header$"
+ war_demand_policy_limit_slavery_tooltip_content:2 "All slaves in the [parameter:country.GetName] will be freed and slavery will be forbidden for the duration of the treaty."
  war_demand_policy_limit_slavery_tooltip_proper_header:1 "$war_demand_policy_limit_slavery_header$"
  war_demand_policy_limit_slavery_tooltip_proper_content:2 "$war_demand_policy_limit_slavery_tooltip_content$"
  #3) limit AI ##
- DEMAND_POLICY_LIMIT_AI:0 "POLICY_LIMIT_AI the inhabitants of $PLANET|H$"
- DEMAND_POLICY_LIMIT_AI_TITLE:0 "§RPOLICY_LIMIT_AI§!: $POPULATION|H$"
- DEMAND_POLICY_LIMIT_AI_INFO:0 "POLICY_LIMIT_AIled, whether they have escape ships or not..."
- DEMAND_POLICY_LIMIT_AI_INFO_SOLO:0 "All inhabitants of this planet will be forcibly POLICY_LIMIT_AIled, whether they have escape ships or not..."
- war_demand_policy_limit_ai_header:1 "§Rpolicy_limit_ai Population§!"
- war_demand_policy_limit_ai_subtext:1 "[parameter:planet.GetName] ([parameter:planet.GetStarName])"
- war_demand_policy_limit_ai_tooltip_header:0 "policy_limit_ai Population"
- war_demand_policy_limit_ai_tooltip_content:2 "[parameter:planet.GetName]"
+ DEMAND_POLICY_LIMIT_AI:0 "Abolish Artificial Intelligence"
+ DEMAND_POLICY_LIMIT_AI_TITLE:0 "$DEMAND_POLICY_LIMIT_AI$"
+ DEMAND_POLICY_LIMIT_AI_INFO:0 "All robotic units and intelligent synthetic lifeforms will be decomissioned and the empire will be forbidden to use artificial intelligence for 10 years."
+ DEMAND_POLICY_LIMIT_AI_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_AI_INFO$"
+ war_demand_policy_limit_ai_header:1 "§GAbolish Artificial Intelligence§!"
+ war_demand_policy_limit_ai_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_ai_tooltip_header:0 "$war_demand_policy_limit_ai_header$"
+ war_demand_policy_limit_ai_tooltip_content:2 "All robotic units and intelligent synthetic lifeforms in the [parameter:country.GetName] will be decomissioned and the empire will be forbidden to use artificial intelligence for 10 years."
  war_demand_policy_limit_ai_tooltip_proper_header:1 "$war_demand_policy_limit_ai_header$"
  war_demand_policy_limit_ai_tooltip_proper_content:2 "$war_demand_policy_limit_ai_tooltip_content$"
  #4) allow AI ##
- DEMAND_POLICY_ALLOW_AI:0 "POLICY_ALLOW_AI the inhabitants of $PLANET|H$"
- DEMAND_POLICY_ALLOW_AI_TITLE:0 "§RPOLICY_ALLOW_AI§!: $POPULATION|H$"
- DEMAND_POLICY_ALLOW_AI_INFO:0 "POLICY_ALLOW_AIled, whether they have escape ships or not..."
- DEMAND_POLICY_ALLOW_AI_INFO_SOLO:0 "All inhabitants of this planet will be forcibly POLICY_ALLOW_AIled, whether they have escape ships or not..."
- war_demand_policy_allow_ai_header:1 "§Rpolicy_allow_ai Population§!"
- war_demand_policy_allow_ai_subtext:1 "[parameter:planet.GetName] ([parameter:planet.GetStarName])"
- war_demand_policy_allow_ai_tooltip_header:0 "policy_allow_ai Population"
- war_demand_policy_allow_ai_tooltip_content:2 "[parameter:planet.GetName]"
+ DEMAND_POLICY_ALLOW_AI:0 "Full AI Rights "
+ DEMAND_POLICY_ALLOW_AI_TITLE:0 "$DEMAND_POLICY_ALLOW_AI$"
+ DEMAND_POLICY_ALLOW_AI_INFO:0 "All intelligent synthetic lifeforms will be given the rights of an ordinary citizen. For 10 years this empire will be unable to change this."
+ DEMAND_POLICY_ALLOW_AI_INFO_SOLO:0 "$DEMAND_POLICY_ALLOW_AI_INFO$"
+ war_demand_policy_allow_ai_header:1 "§GAbolish Artificial Intelligence§!"
+ war_demand_policy_allow_ai_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_allow_ai_tooltip_header:0 "$war_demand_policy_allow_ai_header$"
+ war_demand_policy_allow_ai_tooltip_content:2 "All intelligent synthetic lifeforms in the [paramter:country.GetName] will be given the rights of an ordinary citizen. For 10 years they will be unable to change this."
  war_demand_policy_allow_ai_tooltip_proper_header:1 "$war_demand_policy_allow_ai_header$"
  war_demand_policy_allow_ai_tooltip_proper_content:2 "$war_demand_policy_allow_ai_tooltip_content$"
  #5) limit migration ##
- DEMAND_POLICY_LIMIT_MIGRATION:0 "POLICY_LIMIT_MIGRATION the inhabitants of $PLANET|H$"
- DEMAND_POLICY_LIMIT_MIGRATION_TITLE:0 "§RPOLICY_LIMIT_MIGRATION§!: $POPULATION|H$"
- DEMAND_POLICY_LIMIT_MIGRATION_INFO:0 "POLICY_LIMIT_MIGRATIONled, whether they have escape ships or not..."
- DEMAND_POLICY_LIMIT_MIGRATION_INFO_SOLO:0 "All inhabitants of this planet will be forcibly POLICY_LIMIT_MIGRATIONled, whether they have escape ships or not..."
- war_demand_policy_limit_migration_header:1 "§Rpolicy_limit_migration Population§!"
- war_demand_policy_limit_migration_subtext:1 "[parameter:planet.GetName] ([parameter:planet.GetStarName])"
- war_demand_policy_limit_migration_tooltip_header:0 "policy_limit_migration Population"
- war_demand_policy_limit_migration_tooltip_content:2 "[parameter:planet.GetName]"
+ DEMAND_POLICY_LIMIT_MIGRATION:0 "Limit Xeno Migrations"
+ DEMAND_POLICY_LIMIT_MIGRATION_TITLE:0 "$DEMAND_POLICY_LIMIT_MIGRATION$"
+ DEMAND_POLICY_LIMIT_MIGRATION_INFO:0 "These damn xenos are spreading all over the galaxy. Force the target empire to confine themselves to their current worlds."
+ DEMAND_POLICY_LIMIT_MIGRATION_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_MIGRATION_INFO$"
+ war_demand_policy_limit_migration_header:1 "§GLimit Xeno Migrations§!"
+ war_demand_policy_limit_migration_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_migration_tooltip_header:0 "$war_demand_policy_limit_migration_header$"
+ war_demand_policy_limit_migration_tooltip_content:2 "These damn xenos from [parameter:country.GetName] are spreading all over the galaxy. Force them to confine themselves to their current worlds."
  war_demand_policy_limit_migration_tooltip_proper_header:1 "$war_demand_policy_limit_migration_header$"
  war_demand_policy_limit_migration_tooltip_proper_content:2 "$war_demand_policy_limit_migration_tooltip_content$"
  #6) limit enlightenment ##
- DEMAND_POLICY_LIMIT_NATIVES:0 "POLICY_LIMIT_NATIVES the inhabitants of $PLANET|H$"
- DEMAND_POLICY_LIMIT_NATIVES_TITLE:0 "§RPOLICY_LIMIT_NATIVES§!: $POPULATION|H$"
- DEMAND_POLICY_LIMIT_NATIVES_INFO:0 "POLICY_LIMIT_NATIVESled, whether they have escape ships or not..."
- DEMAND_POLICY_LIMIT_NATIVES_INFO_SOLO:0 "All inhabitants of this planet will be forcibly POLICY_LIMIT_NATIVESled, whether they have escape ships or not..."
- war_demand_policy_limit_natives_header:1 "§Rpolicy_limit_natives Population§!"
- war_demand_policy_limit_natives_subtext:1 "[parameter:planet.GetName] ([parameter:planet.GetStarName])"
- war_demand_policy_limit_natives_tooltip_header:0 "policy_limit_natives Population"
- war_demand_policy_limit_natives_tooltip_content:2 "[parameter:planet.GetName]"
+ DEMAND_POLICY_LIMIT_NATIVES:0 "Limit Native Enlightenment"
+ DEMAND_POLICY_LIMIT_NATIVES_TITLE:0 "$DEMAND_POLICY_LIMIT_NATIVES$"
+ DEMAND_POLICY_LIMIT_NATIVES_INFO:0 "This galaxy is not in need of even more fledging xeno empires. Forbid them from native enlightenment for 10 years."
+ DEMAND_POLICY_LIMIT_NATIVES_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_NATIVES_INFO$"
+ war_demand_policy_limit_natives_header:1 "§GLimit Native Enlightenment§!"
+ war_demand_policy_limit_natives_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_natives_tooltip_header:0 "$war_demand_policy_limit_natives_header$"
+ war_demand_policy_limit_natives_tooltip_content:2 "This galaxy is not in need of even more fledging xeno empires. Forbid the [parameter:country.GetName] from native enlightenment for 10 years."
  war_demand_policy_limit_natives_tooltip_proper_header:1 "$war_demand_policy_limit_natives_header$"
  war_demand_policy_limit_natives_tooltip_proper_content:2 "$war_demand_policy_limit_natives_tooltip_content$"
  #7) limit war economy ##
- DEMAND_POLICY_LIMIT_WAR_ECONOMY:0 "POLICY_LIMIT_WAR_ECONOMY the inhabitants of $PLANET|H$"
- DEMAND_POLICY_LIMIT_WAR_ECONOMY_TITLE:0 "§RPOLICY_LIMIT_WAR_ECONOMY§!: $POPULATION|H$"
- DEMAND_POLICY_LIMIT_WAR_ECONOMY_INFO:0 "POLICY_LIMIT_WAR_ECONOMYled, whether they have escape ships or not..."
- DEMAND_POLICY_LIMIT_WAR_ECONOMY_INFO_SOLO:0 "All inhabitants of this planet will be forcibly POLICY_LIMIT_WAR_ECONOMYled, whether they have escape ships or not..."
- war_demand_policy_limit_war_economy_header:1 "§Rpolicy_limit_war_economy Population§!"
- war_demand_policy_limit_war_economy_subtext:1 "[parameter:planet.GetName] ([parameter:planet.GetStarName])"
- war_demand_policy_limit_war_economy_tooltip_header:0 "policy_limit_war_economy Population"
- war_demand_policy_limit_war_economy_tooltip_content:2 "[parameter:planet.GetName]"
+ DEMAND_POLICY_LIMIT_WAR_ECONOMY:0 "Impose Military Restrictions"
+ DEMAND_POLICY_LIMIT_WAR_ECONOMY_TITLE:0 "$DEMAND_POLICY_LIMIT_WAR_ECONOMY$"
+ DEMAND_POLICY_LIMIT_WAR_ECONOMY_INFO:0 "Impose military restrictions on the war economy of the target empire and make it more expensive for them to fight offensive wars for 10 years."
+ DEMAND_POLICY_LIMIT_WAR_ECONOMY_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_WAR_ECONOMY_INFO$"
+ war_demand_policy_limit_war_economy_header:1 "§GImpose Military Restrictions§!"
+ war_demand_policy_limit_war_economy_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_war_economy_tooltip_header:0 "$war_demand_policy_limit_war_economy_header$"
+ war_demand_policy_limit_war_economy_tooltip_content:2 "Impose military restrictions on the war economy of the [parameter:country.GetName] and make it more expensive for them to fight offensive wars for 10 years."
  war_demand_policy_limit_war_economy_tooltip_proper_header:1 "$war_demand_policy_limit_war_economy_header$"
  war_demand_policy_limit_war_economy_tooltip_proper_content:2 "$war_demand_policy_limit_war_economy_tooltip_content$"
+ #8) limit purges
+ DEMAND_POLICY_LIMIT_PURGE:0 "Abolish Purges"
+ DEMAND_POLICY_LIMIT_PURGE_TITLE:0 "$DEMAND_POLICY_LIMIT_PURGE$"
+ DEMAND_POLICY_LIMIT_PURGE_INFO:0 "All purges in the target empire will be stopped and purging will be forbidden for the duration of the treaty."
+ DEMAND_POLICY_LIMIT_PURGE_INFO_SOLO:0 "$DEMAND_POLICY_LIMIT_PURGE_INFO$"
+ war_demand_policy_limit_purge_header:1 "§GAbolish Purges§!"
+ war_demand_policy_limit_purge_subtext:1 "[parameter:country.GetName]"
+ war_demand_policy_limit_purge_tooltip_header:0 "$war_demand_policy_limit_purge_header$"
+ war_demand_policy_limit_purge_tooltip_content:2 "All purges in the [parameter:country.GetName] will be stopped and purging will be forbidden for the duration of the treaty."
+ war_demand_policy_limit_purge_tooltip_proper_header:1 "$war_demand_policy_limit_purge_header$"
+ war_demand_policy_limit_purge_tooltip_proper_content:2 "$war_demand_policy_limit_purge_tooltip_content$"
+ ##################
+ #Supremacy 
+ DEMAND_SUPREMACY:0 "Supremacy"
+ DEMAND_SUPREMACY_TITLE:0 "§RSupremacy§"
+ DEMAND_SUPREMACY_INFO:0 "Exert our total military supremacy over the target empire and annex all of their planets. This will make us a pariah in the galactic commmunity and the enemy of all civilized nations."
+ DEMAND_SUPREMACY_INFO_SOLO:0 "Exert our total military supremacy over the target empire and annex all of their planets. This will make us a pariah in the galactic commmunity and the enemy of all civilized nations"
+ war_demand_supremacy_header:1 "§RSupremacy§!"
+ war_demand_supremacy_subtext:1  "[parameter:country.GetName]"
+ war_demand_supremacy_tooltip_header:0 "§RSupremacy§"
+ war_demand_supremacy_tooltip_content:2 "Exert our total military supremacy over the [parameter:country.GetName] and annex all of their planets. This will make us a pariah in the galactic commmunity and the enemy of all civilized nations. "
+ war_demand_supremacy_tooltip_proper_header:1 "$war_demand_supremacy_header$"
+ war_demand_supremacy_tooltip_proper_content:2 "$war_demand_supremacy_tooltip_content$"
+ war_demand_supremacy_wrong_type:0 "We cannot use our usual methods on this enemy"
+ war_demand_supremacy_vassalize:0 "We cannot both vassalize and annex an empire"
+ #Xenoplague
+ DEMAND_XENOPLAGUE:0 "The Xenoplague"
+ DEMAND_XENOPLAGUE_TITLE:0 "§RThe Xenoplague§"
+ DEMAND_XENOPLAGUE_INFO:0 "Unleash our xenoplague onto their planets. All higher forms of life that are not belonging to our species will perish. This will make us a pariah in the galactic commmunity and the enemy of all civilized nations."
+ DEMAND_XENOPLAGUE_INFO_SOLO:0 "$DEMAND_XENOPLAGUE_INFO$"
+ war_demand_xenoplague_header:1 "§RThe Xenoplague§!"
+ war_demand_xenoplague_subtext:1 "[parameter:country.GetName]"
+ war_demand_xenoplague_tooltip_header:0 "The Xenoplague"
+ war_demand_xenoplague_tooltip_content:2 "Unleash our xenoplague onto the planets of the [parameter:country.GetName]. All higher forms of life that are not belonging to our species will perish. This will make us a pariah in the galactic commmunity and the enemy of all civilized nations."
+ war_demand_xenoplague_tooltip_proper_header:1 "$war_demand_xenoplague_header$"
+ war_demand_xenoplague_tooltip_proper_content:2 "$war_demand_xenoplague_tooltip_content$"
+ war_demand_xenoplague_wrong_type:0 "Our military experts are unsure if our plague will have any effect here."
+ war_demand_xenoplague_vassalize:0 "We cannot vassalize an empire that will be wiped out after the war."
+ 
+ 
  
  
  #some custom_tool_fail
@@ -274,9 +314,9 @@
  war_demand_raze_fullbombs:0 "This option definitely not in accordance to light bombardement protocolls or any kind of pacifism."
  war_demand_demil_fullbombs:0 "This option is in accordance to light bombardement protocolls"
  war_demand_nuke_mil:0 "Only fanatic militarists would advocate this option."
- war_demand_not_opponent:0 "This Empire is no longer an opponent" ##
- war_demand_tech_missing:0 "We are missing a vital technology for this strategy" ##
- war_demand_no_planets:0 "This entity will have no planets left after the war"
+ war_demand_not_opponent:0 "This Empire is no longer an opponent" 
+ war_demand_tech_missing:0 "We are missing a vital technology for this strategy" 
+ war_demand_no_planets:0 "This entity will have no planets left after the war" 
  
  ## Edict to Enslave
  
@@ -307,9 +347,9 @@
  opinion_nuked_us:0 "Nuked one of our planets"
  opinion_intervened_against_us:0  "Intervened in a war against our interests"
  opinion_intervened_for_us:0 "Intervened in a war on our behalf"
- opinion_interfered_with_our_politics:0 "Interfered with our domestic politics" ##
- opinion_policy_good:0 "Cchanged the policies of another country in a favourable way" ##
- opinion_policy_bas:0 "Changed the policies of another country in an unfavourable way" ##
- opinion_nuked_a_world:0 "Turned a habitable world into a toxic wasteland" ##
- opinion_scourge_of_the_galaxy:0 "Vile scourge of the galaxy" ##
+ opinion_interfered_with_our_politics:0 "Interfered with our domestic politics" 
+ opinion_policy_good:0 "Cchanged the policies of another country in a favourable way" 
+ opinion_policy_bas:0 "Changed the policies of another country in an unfavourable way" 
+ opinion_nuked_a_world:0 "Turned a habitable world into a toxic wasteland" 
+ opinion_scourge_of_the_galaxy:0 "Vile scourge of the galaxy" 
   
